# example.llama-index

./: .gitignore  Makefile  README.md  action.yml  pyproject.toml  test.txt
.devcontainer/: devcontainer.json
.github/: auto-assign.yml
.github/actions/review/: action.yml
.github/actions/save/: action.yml
.github/workflows/: auto-assign.yml  build.yml  publish.yml  review.yml  save.yml  test.yml
docs/: debug.md
gpt_review_with_precondition/: review.py  review_debug.py  save.py
gpt_review_with_precondition/args/: args.py  env.py
gpt_review_with_precondition/llama_index_wrapper/: api.py  notion.py
inputs/: notion_document_ids.json  notion_document_query.json  pr_summary.md  prompt.md
src/: main.py
src/args/: args.py  env.py
src/llama_index_wrapper/: api.py  notion.py
src/log/: logger.py
src/storage/: storage.py
